--- a/html/index.html
+++ b/html/index.html
@@ -1,353 +1,333 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="author" content="iveseenthedark" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#333333" />
 
-    <title>A S C I I C A M</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clock</title>
     <style>
-      #ascii-cam pre,
-      body,
-      html {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-      }
-      * {
-        box-sizing: border-box;
-      }
-      body {
-        overflow: hidden;
-        background-color: #000;
-        color: #eee;
-        font-family: monospace;
-      }
-      #logo,
-      #enable-cam-msg {
-        transform: translate(-50%, -50%);
-        position: absolute;
-        left: 50%;
-        top: 50%;
-      }
-      .fade {
-        transition: opacity 0.25s ease-in-out;
-      }
-      #logo {
-        line-height: 1.5;
-      }
-      #ascii-cam {
-        opacity: 0;
-      }
-      #ascii-cam pre {
-        position: absolute;
-        top: 0;
-        left: 0;
-        overflow: hidden;
-        line-height: 0.6;
-        user-select: none;
-        mix-blend-mode: screen;
-        font-size: 1.2em;
-        font-size: 2vh;
-      }
-      @media (max-height: 50em) {
-        #ascii-cam pre {
-          font-size: 1em;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-      }
-      @media (min-height: 60em) {
-        #ascii-cam pre {
-          font-size: 1.2em;
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #091921;
         }
-      }
-      #ascii-cam #r-output {
-        color: red;
-      }
-      #ascii-cam #g-output {
-        color: #0f0;
-      }
-      #ascii-cam #b-output {
-        color: #00f;
-      }
-      #enable-cam-msg {
-        opacity: 0;
-        font-size: 3rem;
-        background-color: white;
-        color: black;
-        margin: 0;
-        max-width: 50vw;
-        white-space: pre-line;
-        text-align: center;
-        font-weight: 900;
-      }
-      #canvas,
-      #video {
-        display: none;
-      }
+
+        body.light {
+            background: #d1dae3;
+        }
+
+        .clock {
+            width: 350px;
+            height: 350px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #091921;
+            border: 20px solid #091921;
+            border-radius: 50%;
+            box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.05),
+                20px 20px 20px rgba(0, 0, 0, 0.3),
+                inset -8px -8px 15px rgba(255, 255, 255, 0.05),
+                inset 20px 20px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        body.light .clock {
+            background: #d1dae3;
+            border: 20px solid #cad3dc;
+            box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.5),
+                10px 10px 10px rgba(0, 0, 0, 0.3),
+                inset -8px -8px 15px rgba(255, 255, 255, 0.5),
+                inset 10px 10px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .clock::before {
+            content: '';
+            position: absolute;
+            height: 15px;
+            width: 15px;
+            background: #fff;
+            border-radius: 50%;
+            z-index: 100000;
+        }
+
+        body.light .clock::before {
+            background: #008eff;
+        }
+
+        .indicators div {
+            position: absolute;
+            width: 2px;
+            height: 15px;
+            background: #404040;
+        }
+
+        .indicators div:nth-child(1) {
+            transform: rotate(30deg) translateY(-130px) translateX(-3px);
+        }
+
+        .indicators div:nth-child(2) {
+            transform: rotate(60deg) translateY(-130px) translateX(-5px);
+        }
+
+        .indicators div:nth-child(3) {
+            transform: rotate(120deg) translateY(-130px) translateX(-5px);
+        }
+
+        .indicators div:nth-child(4) {
+            transform: rotate(150deg) translateY(-130px) translateX(-2px);
+        }
+
+        .indicators div:nth-child(5) {
+            transform: rotate(210deg) translateY(-130px) translateX(4px);
+        }
+
+        .indicators div:nth-child(6) {
+            transform: rotate(240deg) translateY(-130px) translateX(6px);
+        }
+
+        .indicators div:nth-child(7) {
+            transform: rotate(300deg) translateY(-130px) translateX(5px);
+        }
+
+        .indicators div:nth-child(8) {
+            transform: rotate(330deg) translateY(-130px) translateX(2px);
+        }
+
+        body.light .indicators div {
+            background: #808080;
+        }
+
+        .nums {
+            position: absolute;
+            font-size: 30px;
+            font-weight: bold;
+            color: #808080;
+        }
+
+        #three {
+            position: absolute;
+            left: 120px;
+            top: -15px;
+        }
+
+        #six {
+            position: absolute;
+            top: 110px;
+            left: -8px;
+        }
+
+        #nine {
+            position: absolute;
+            right: 120px;
+            top: -15px;
+        }
+
+        #twelve {
+            position: absolute;
+            bottom: 110px;
+            left: -15px;
+        }
+
+        .clock .hour,
+        .clock .min,
+        .clock .sec {
+            position: absolute;
+            z-index: 10;
+        }
+
+        .hour,
+        .hr {
+            height: 160px;
+            width: 160px;
+        }
+
+        .min,
+        .mn {
+            height: 190px;
+            width: 190px;
+        }
+
+        .sec,
+        .sc {
+            height: 230px;
+            width: 230px;
+        }
+
+        .hr,
+        .mn,
+        .sc {
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            border-radius: 50%;
+        }
+
+        .hr::before {
+            content: '';
+            position: absolute;
+            width: 8px;
+            height: 80px;
+            background: #ff105e;
+            z-index: 10;
+            border-radius: 6px 6px 0 0;
+        }
+
+        .mn::before {
+            content: '';
+            position: absolute;
+            width: 4px;
+            height: 90px;
+            background: #ffffff;
+            z-index: 11;
+            border-radius: 6px 6px 0 0;
+        }
+
+        body.light .mn::before {
+            background: #091921;
+        }
+
+        .sc::before {
+            content: '';
+            position: absolute;
+            width: 2px;
+            height: 150px;
+            background: #008eff;
+            z-index: 12;
+            border-radius: 6px 6px 0 0;
+        }
+
+        .time {
+            height: 20px;
+            position: absolute;
+            top: 60%;
+            padding: 0 5px;
+            border: 1px solid #091921;
+            background: #091921;
+            border-radius: 5px;
+            color: #808080;
+            font-weight: bold;
+            box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.1), -5px -5px 10px rgba(255, 255, 255, 0.1);
+        }
+
+        body.light .time {
+            color: #606060;
+            border: 1px solid #CAD3E3;
+            background: #CAD3E3;
+            box-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5), -5px -5px 10px rgba(255, 255, 255, 0.5);
+        }
+
+        .toggleClass {
+            position: absolute;
+            top: 30px;
+            right: 150px;
+            width: 20px;
+            height: 20px;
+            font-size: 18px;
+            border-radius: 50%;
+            background: #d1dae3;
+            color: #d1dae3;
+            font-family: monospace;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+        }
+
+        .toggleClass::before {
+            position: absolute;
+            left: 25px;
+            content: 'Light Mode';
+            white-space: nowrap;
+        }
+
+        body.light .toggleClass {
+            background: #091921;
+            color: #091921;
+        }
+
+        body.light .toggleClass::before {
+            content: 'Dark Mode';
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <pre id="logo" class="fade">
-   _
-   _n_|_|_,_
-  |===.-.===|
-  |  ((_))  |
-  '==='-'==='
-A S C I I C A M
-    </pre>
-
-    <pre id="enable-cam-msg" class="fade">Allow access to camera to use</pre>
-
-    <div id="ascii-cam" class="fade">
-      <div class="layers">
-        <pre id="r-output"></pre>
-        <pre id="g-output"></pre>
-        <pre id="b-output"></pre>
-      </div>
+<body class="light">
+    <div class="clock">
+        <div class="hour">
+            <div class="hr" id="hr"></div>
+        </div>
+        <div class="min">
+            <div class="mn" id="mn"></div>
+        </div>
+        <div class="sec">
+            <div class="sc" id="sc"></div>
+        </div>
+        <div class="indicators">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="nums">
+            <span id="three">3</span>
+            <span id="six">6</span>
+            <span id="nine">9</span>
+            <span id="twelve">12</span>
+        </div>
+        <div class="time"></div>
     </div>
+    <div class="toggleClass" onclick="toggleClass()"></div>
+    <script>
+        function toggleClass() {
+            const body = document.querySelector('body');
+            body.classList.toggle('light');
+        }
 
-    <video id="video" autoplay="true"></video>
-    <canvas id="canvas" width="640" height="480"></canvas>
-    <script type="application/javascript">
-      (() => {
-        'use strict';
+        const hr = document.querySelector('#hr');
+        const mn = document.querySelector('#mn');
+        const sc = document.querySelector('#sc');
+        const time = document.querySelector('.time');
 
-        let interval;
-        let r_layer, g_layer, b_layer;
-        const palette = [' ', '.', '-', ':', '+', '*', '=', '%', '@', '#'];
-        const vanity = 'B Y  I V E S E E N T H E D A R K';
+        setInterval(() => {
+            let day = new Date();
+            let hour = day.getHours();
+            let min = day.getMinutes();
+            let sec = day.getSeconds();
 
-        /**
-         * @param {*} stream
-         */
-        const handle_video = stream => {
-          const canvas = document.getElementById('canvas');
-          const ctx = canvas.getContext('2d');
+            let hrPosition = hour * 30 + min / 2      //hour * 360/12 + ((min * 360/60)/12)
+            let minPosition = min * 6;             //min * 360/60
+            let secPosition = sec * 6;           //sec * 360/60
 
-          const video = document.getElementById('video');
-          // Older browsers may not have srcObject
-          if ('srcObject' in video) {
-            video.srcObject = stream;
-          } else {
-            // Avoid using this in new browsers, as it is going away.
-            video.src = window.URL.createObjectURL(stream);
-          }
-          video.addEventListener('loadedmetadata', () => {
-            window.addEventListener('resize', () => set_canvas_dimensions(video, canvas, ctx));
-            set_canvas_dimensions(video, canvas, ctx);
+            hr.style.transform = `rotateZ(${hrPosition}deg)`;
+            mn.style.transform = `rotateZ(${minPosition}deg)`;
+            sc.style.transform = `rotateZ(${secPosition}deg)`;
 
-            // Hide Logo
-            play_video(video, canvas, ctx);
-            setTimeout(() => {
-              document.getElementById('logo').style.opacity = 0;
-              document.getElementById('ascii-cam').style.opacity = 1;
-            }, 1000);
-          });
-        };
-
-        /**
-         */
-        const handle_no_video = () => {
-          setTimeout(() => {
-            document.getElementById('logo').style.opacity = 0;
-            document.getElementById('ascii-cam').style.opacity = 1;
-            document.getElementById('enable-cam-msg').style.opacity = 1;
-            play_random();
-          }, 1000);
-        };
-
-        /**
-         * @param {*} e
-         */
-        const handle_error = e => {
-          console.error('Error', e);
-          handle_no_video();
-        };
-
-        /**
-         * The greyscale value is calculated GREY = 0.299 * RED + 0.587 * GREEN + 0.114 * BLUE
-         * For more information see http://en.wikipedia.org/wiki/Grayscale
-         * @param {Array} image_data
-         */
-        const fade_to_grey = pixels => pixels.map(pixel => pixel[0] * 0.299 + pixel[1] * 0.587 + pixel[2] * 0.114);
-
-        /**
-         */
-        const play_video = (video, canvas, ctx) => {
-          clearInterval(interval);
-
-          // Buffer reverse
-          ctx.drawImage(video, 0, 0, canvas.width * -1, canvas.height);
-
-          // Grab view
-          const dx = canvas.dataset.hoffset || 0;
-          const dy = canvas.dataset.voffset || 0;
-          const image_width = canvas.width - dx * 2;
-          const image_data = ctx.getImageData(dx, dy, image_width, canvas.height - dy * 2).data;
-
-          // Chunk
-          const channels = 4;
-          const pixels = Array.from(Array(Math.ceil(image_data.length / channels)), (_, i) =>
-            image_data.slice(i * channels, i * channels + channels)
-          );
-
-          // Draw
-          let r_output = '';
-          let g_output = '';
-          let b_output = '';
-          pixels.forEach((pixel, i) => {
-            // Break for new line
-            if (i && i % image_width === 0) {
-              r_output += '\n';
-              g_output += '\n';
-              b_output += '\n';
+            if (sec < 10) {
+                sec = '0' + sec;
+            }
+            if (min < 10) {
+                min = '0' + min;
+            }
+            if (hour < 10) {
+                hour = '0' + hour;
             }
 
-            const b_idx = Math.floor((pixel[2] / 255.0) * (palette.length - 1));
-            const r_idx = Math.floor((pixel[0] / 255.0) * (palette.length - 1));
-            const g_idx = Math.floor((pixel[1] / 255.0) * (palette.length - 1));
+            time.textContent = hour + ' : ' + min + ' : ' + sec;
 
-            if (i && i >= image_width - vanity.length && i < image_width) {
-              // Input vanity message
-              r_output += vanity[vanity.length + i - image_width];
-              g_output += vanity[vanity.length + i - image_width];
-              b_output += palette[g_idx];
-            } else {
-              // Output camera data
-              r_output += palette[r_idx];
-              g_output += palette[g_idx];
-              b_output += palette[b_idx];
-            }
-          }, this);
-
-          r_layer.textContent = r_output;
-          g_layer.textContent = g_output;
-          b_layer.textContent = b_output;
-
-          interval = setInterval(() => play_video(video, canvas, ctx), 33);
-        };
-
-        /**
-         */
-        const play_random = () => {
-          clearInterval(interval);
-
-          const char_dims = get_character_dimensions();
-          const screen_dims = get_screen_dimensions(char_dims);
-          const total_chars = Math.floor(screen_dims.char_width * screen_dims.char_height);
-
-          const mid_x = Math.floor(screen_dims.char_width / 2);
-          const mid_y = Math.floor(screen_dims.char_height / 2);
-
-          let radius_sq = mid_x * mid_x + mid_y + mid_y;
-          radius_sq = radius_sq < 2500 ? 2500 : radius_sq; // Stop the circle getting too small
-
-          let r_output = '',
-            g_output = '',
-            b_output = '';
-          for (let i = 0; i < total_chars; i++) {
-            // Break for new line
-            if (i && i % screen_dims.char_width === 0) {
-              r_output += '\n';
-              g_output += '\n';
-              b_output += '\n';
-            }
-
-            const char_pos_x = i % screen_dims.char_width;
-            const char_pos_y = i / screen_dims.char_width;
-
-            let dist = (char_pos_x - mid_x) * (char_pos_x - mid_x) + (char_pos_y - mid_y) * (char_pos_y - mid_y);
-            dist = dist > radius_sq ? radius_sq : dist; // Distance can be further than radius, clamp
-
-            const range = Math.floor(palette.length * (1 - dist / radius_sq));
-            const r_idx = Math.floor(Math.random() * range);
-            const g_idx = Math.floor(Math.random() * range);
-            const b_idx = Math.floor(Math.random() * range);
-
-            r_output += palette[r_idx];
-            g_output += palette[g_idx];
-            b_output += palette[b_idx];
-          }
-
-          r_layer.textContent = r_output;
-          g_layer.textContent = g_output;
-          b_layer.textContent = b_output;
-
-          interval = setInterval(play_random, 100);
-        };
-
-        /**
-         */
-        const get_character_dimensions = () => {
-          const span = document.createElement('span');
-          span.textContent = 'X';
-          span.style.position = 'absolute';
-          span.style.left = '-100px';
-
-          document.querySelector('#ascii-cam pre').appendChild(span);
-          const dimensions = span.getBoundingClientRect();
-          span.remove();
-
-          return dimensions;
-        };
-
-        /**
-         */
-        const get_screen_dimensions = char_dims => {
-          return {
-            width: window.innerWidth,
-            height: window.innerHeight,
-            char_width: Math.ceil(window.innerWidth / char_dims.width),
-            char_height: Math.ceil(window.innerHeight / char_dims.height)
-          };
-        };
-
-        /**
-         */
-        const set_canvas_dimensions = (video, canvas, ctx) => {
-          console.log('setting canvas dimensions');
-          const char_dims = get_character_dimensions();
-          const screen_dims = get_screen_dimensions(char_dims);
-
-          let width = Math.floor(screen_dims.width / char_dims.width);
-          let height = Math.max(width * 0.75, screen_dims.char_height);
-
-          if (height > screen_dims.char_height) {
-            canvas.dataset.voffset = Math.floor((height - screen_dims.char_height) / 2);
-            canvas.dataset.hoffset = 0;
-          } else {
-            width = (height / 3) * 4;
-            canvas.dataset.hoffset = Math.floor((width - screen_dims.char_width) / 2);
-            canvas.dataset.voffset = 0;
-          }
-
-          video.width = canvas.width = width;
-          video.height = canvas.height = height;
-
-          // Reset scale if context exists
-          ctx && ctx.scale(-1, 1);
-        };
-
-        // Onload
-        window.addEventListener('load', () => {
-          if (navigator && navigator.mediaDevices) {
-            // Grab layers
-            r_layer = document.getElementById('r-output');
-            g_layer = document.getElementById('g-output');
-            b_layer = document.getElementById('b-output');
-
-            const constraints = { audio: false, video: {} };
-            navigator.mediaDevices
-              .getUserMedia(constraints)
-              .then(handle_video)
-              .catch(handle_error);
-          } else {
-            handle_no_video();
-          }
-        });
-      })();
+        }, 1000);
     </script>
-  </body>
+</body>
+
 </html>
