--- a/apps/deno-vless/index.html
+++ b/apps/deno-vless/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>TestApp</title>
+  <title>Edge Tunnel VLESS Deno</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
