--- a/apps/deno-vless/src/client/index.html
+++ b/apps/deno-vless/src/client/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>TestApp</title>
+  <title>Edge Tunnel VLESS Deno</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <script type="module" crossorigin src="/assets/index.e59be68f.js"></script>
-  <link rel="stylesheet" href="/assets/index.c43fa495.css">
+  <script type="module" crossorigin src="/assets/index.b8c31462.js"></script>
+  <link rel="stylesheet" href="/assets/index.d7b429b2.css">
 </head>
 
 <body>
